Fix double hash lookup in DocumentEventQueue::cancelEvent(). <http://webkit.org/b/117031>

Reviewed by Anders Carlsson.

* dom/DocumentEventQueue.cpp:
(WebCore::DocumentEventQueue::cancelEvent):

Canonical link: https://commits.webkit.org/135301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150969 268f45cc-cd09-0410-ab3c-d52691b4dbfc